force-app/main/default/objects/Question__c/Question__c.object-meta.xml
<CustomObject>
    <label>BT Selection Option</label>
    <nameField>
        <label>Option Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BT Selection Options</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>