force-app/main/default/objects/Question__c/fields/Change_Order_Line__c.field-meta.xml
<CustomField>
    <fullName>Change_Order_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Change Order Line</label>
    <referenceTo>Change_Order_Item__c</referenceTo>
    <relationshipName>Options</relationshipName>
    <type>Lookup</type>
</CustomField>