force-app/main/default/objects/Question__c/fields/Check_Project__c.field-meta.xml
<CustomField>
    <fullName>Check_Project__c</fullName>
    <formula>Question_Group__r.Section__r.Selection__r.Project__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check Project</label>
    <type>Text</type>
</CustomField>