force-app/main/default/objects/Question__c/fields/Cost__c.field-meta.xml
<CustomField>
    <fullName>Cost__c</fullName>
    <inlineHelpText>Base Cost that you are paying your Vendor or Supplier.</inlineHelpText>
    <label>Base Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>