force-app/main/default/objects/Question__c/fields/Option_Color__c.field-meta.xml
<CustomField>
    <fullName>Option_Color__c</fullName>
    <label>Option Color</label>
    <type>TextArea</type>
</CustomField>