force-app/main/default/objects/Question__c/fields/Option_Location__c.field-meta.xml
<CustomField>
    <fullName>Option_Location__c</fullName>
    <label>Option Location</label>
    <type>TextArea</type>
</CustomField>