force-app/main/default/objects/Question__c/fields/Original_Option__c.field-meta.xml
<CustomField>
    <fullName>Original_Option__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The original option this option was upgraded from.</inlineHelpText>
    <label>Original Option</label>
    <referenceTo>Question__c</referenceTo>
    <relationshipName>Options</relationshipName>
    <type>Lookup</type>
</CustomField>