force-app/main/default/objects/Question__c/fields/Pricing_Request_Line__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Request_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pricing Request Line</label>
    <referenceTo>Pricing_Request_Line__c</referenceTo>
    <relationshipName>Options</relationshipName>
    <type>Lookup</type>
</CustomField>