force-app/main/default/objects/Question__c/fields/RFQ__c.field-meta.xml
<CustomField>
    <fullName>RFQ__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RFQ</label>
    <referenceTo>RFQ__c</referenceTo>
    <relationshipName>Options</relationshipName>
    <type>Lookup</type>
</CustomField>