force-app/main/default/objects/Question__c/fields/RFQ_Line__c.field-meta.xml
<CustomField>
    <fullName>RFQ_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RFQ Lines</label>
    <referenceTo>RFQ_Item__c</referenceTo>
    <relationshipName>Options</relationshipName>
    <type>Lookup</type>
</CustomField>