force-app/main/default/objects/Question__c/fields/Total_Cost_Per_Unit__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost_Per_Unit__c</fullName>
    <formula>Upgrade_Costs__c +  Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Base Cost plus your Upgrade Cost</inlineHelpText>
    <label>Total Cost Per Unit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>