force-app/main/default/objects/Question__c/fields/Total_Sales_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Sales_Price__c</fullName>
    <formula>/*IF( buildertek__Markup__c &gt; 0 , (buildertek__Markup__c * (buildertek__Quantity__c * (buildertek__Cost__c +  buildertek__Upgrade_Costs__c)) + (buildertek__Quantity__c * (buildertek__Cost__c +  buildertek__Upgrade_Costs__c))), 

(buildertek__Quantity__c * (buildertek__Cost__c +  buildertek__Upgrade_Costs__c)))*/

Total_Cost__c   +  Markup_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Sales Price for your Customer.</inlineHelpText>
    <label>Total Sales Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>